--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Shippori+Antique&display=swap');
 *{
     margin:0;
     padding:0;
@@ -10,8 +9,20 @@
     margin-top:50px;
 }
 #header{
-    font-family:Shippori Antique;
-    font-size:24px;
+    font-family:sans-serif;
+    font-size:2em;
     text-align:center;
     margin-top:20px;
+}
+.text{
+    margin-top:15px;
+    margin-left:480px;
+    font-size:26px;
+}
+.form input{
+    border:none;
+    border-bottom:1px solid rgb(29,161,242);
+    padding:20px;
+    width:500px;
+    outline-style:none;
 }
